--- a/css/less/footer.less
+++ b/css/less/footer.less
@@ -12,6 +12,10 @@
                font-style: normal;
                font-weight: 600;
                font-size: 14px;
+               
+               &:hover {
+                text-decoration-line: underline;
+               }
            } 
         }
     }
