--- a/css/less/header.less
+++ b/css/less/header.less
@@ -1,4 +1,14 @@
 .header {
+    position: relative;
+
+    .background {
+        width: 524px;
+        height: 751px;
+        position: absolute;
+        background: #FCEAE8;
+        z-index: -1;
+        right: -95px;
+    }
     &-top {
         display: flex;
         padding-top: 90px;
@@ -19,11 +29,15 @@
         font-size: 14px;
         line-height: 19px;
         text-transform: uppercase;
+
+        &:hover {
+            text-decoration-line: underline;
+        }
     }
 
     &-wrapper {
         margin-left: auto;
-
+        
         >div {
             display: inline-block;
         }
@@ -31,6 +45,11 @@
 
     &-search {
         margin-right: 22px;
+        cursor: pointer;
+    }
+
+    &-basket {
+        cursor: pointer;
     }
 
     &-bottom {
@@ -95,6 +114,7 @@
     
     &-slider {
         margin-left: auto;
+        text-align: right;
         .items {
             font-family: "PlayfairDisplay", sans-serif;
             font-style: normal;
@@ -103,6 +123,7 @@
             color: rgba(0, 0, 0, 0.3);
             margin-bottom: 20px;
             margin-left: 11px;
+            cursor: pointer;
         }
         .active {
             font-family: "PlayfairDisplay", sans-serif;
